# Industrial-C

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md  build.sh  conanfile.txt  hehe  input.txt  test.json  test.toml  test.xml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
libcompressor/: CMakeLists.txt
libcompressor/include/libcompressor/: libcompressor.hpp
libcompressor/src/: libcompressor.cpp
libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
libregex/: CMakeLists.txt
libregex/include/libregex/: checker.hpp  exception.hpp  matcher.hpp  nodes.hpp  parser.hpp
libregex/src/: checker.cpp  matcher.cpp  nodes.cpp  parser.cpp
libregex/tests/: CMakeLists.txt  matchertest.cpp  parsertest.cpp
libtransformer/: CMakeLists.txt
libtransformer/include/libtransformer/: ast.hpp  factory.hpp  parser.hpp  serializer.hpp
libtransformer/src/: factory.cpp  parser.cpp  serializer.cpp
regex/: CMakeLists.txt
regex/src/: regex.cpp
transformer/: CMakeLists.txt
transformer/src/: transformer.cpp
